Adds query parameters to extension handlers
